# core-alisinabit

./: .travis.yml  CONTRIBUTING.md  INSTALL  Makefile.am  README.md  configure.ac  libalisinabitconsensus.pc.in
.tx/: config
build-aux/m4/: alisinabit_find_bdb48.m4  alisinabit_qt.m4  alisinabit_subdir_to_include.m4
contrib/: README.md  alisinabit-qt.pro  alisinabitd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  alisinabit-qt.desktop  alisinabit-qt.install  alisinabit-qt.lintian-overrides  alisinabit-qt.protocol  alisinabit-tx.install  alisinabitd.bash-completion  alisinabitd.examples  alisinabitd.install  alisinabitd.lintian-overrides  alisinabitd.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  symbol-check.py  update-translations.py
contrib/qos/: tc.sh  (+1 more)
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  alert.h  alisinabit-cli-res.rc  alisinabit-cli.cpp  alisinabit-tx-res.rc  alisinabit-tx.cpp  alisinabitd-res.rc  alisinabitd.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  (+60 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/policy/: fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  alisinabit.cpp  alisinabit.qrc  alisinabit_locale.qrc  alisinabitaddressvalidator.cpp  alisinabitaddressvalidator.h  alisinabitamountfield.cpp  alisinabitamountfield.h  alisinabitgui.cpp  alisinabitgui.h  alisinabitstrings.cpp  alisinabitunits.cpp  alisinabitunits.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  (+52 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: alisinabit_af.ts  alisinabit_af_ZA.ts  alisinabit_ar.ts  alisinabit_be_BY.ts  alisinabit_bg.ts  alisinabit_bg_BG.ts  alisinabit_bs.ts  alisinabit_ca.ts  alisinabit_ca@valencia.ts  alisinabit_ca_ES.ts  alisinabit_cs.ts  alisinabit_cs_CZ.ts  alisinabit_cy.ts  alisinabit_da.ts  alisinabit_de.ts  alisinabit_el.ts  alisinabit_el_GR.ts  alisinabit_en.ts  alisinabit_en_GB.ts  alisinabit_eo.ts  alisinabit_es.ts  alisinabit_es_AR.ts  alisinabit_es_CL.ts  alisinabit_es_CO.ts  alisinabit_es_DO.ts  alisinabit_es_ES.ts  alisinabit_es_MX.ts  alisinabit_es_UY.ts  alisinabit_es_VE.ts  alisinabit_et.ts  alisinabit_eu_ES.ts  alisinabit_fa.ts  alisinabit_fa_IR.ts  alisinabit_fi.ts  alisinabit_fr.ts  alisinabit_fr_CA.ts  alisinabit_fr_FR.ts  alisinabit_gl.ts  alisinabit_he.ts  alisinabit_hi_IN.ts  (+43 more)
src/qt/res/: alisinabit-qt-res.rc
src/qt/test/: Makefile  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: alisinabitconsensus.cpp  alisinabitconsensus.h  interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_alisinabit_NativeSecp256k1.c  org_alisinabit_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  alisinabit-util-test.py  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  (+18 more)
src/test/data/: README.md  alisinabit-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+165 files in other folders)
